--- a/app/templates/example.html
+++ b/app/templates/example.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flask example</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Test Flask{% endblock %}
+
+{% block body %}
   <h1>Hello</h1>
   {% for number in numbers_list %}
-    <p>{{ number }}</p>
+  <p>{{ number }}</p>
   {% endfor %}
-</body>
-</html>
+{% endblock %}
